# SRMP

./: .gitmodules  CMakeLists.txt
jni/: .gitignore  CMakeLists.txt  build.gradle  pom.xml
jni/gradle/wrapper/: gradle-wrapper.properties
jni/src/main/cpp/: Energy.cpp  Options.cpp  srmp_SRMPJni.h
jni/src/main/java/srmp/: Energy.java  EnergyOptions.java  Factor.java  FactorType.java  Node.java  SRMPJni.java  SolverType.java
jni/src/test/java/srmp/: BasicTest.java
jni_wrapper/: CMakeLists.txt
jni_wrapper/src/main/cpp/: HelloJNI.cpp
jni_wrapper/src/main/java/: HelloJNI.java
